@@ -35,7 +35,8 @@ VI.   PROBLEMS CORRECTED AND NEW FEATURES IN PRIOR RELEASES
     address/net) in CONTINUE, NONAT and ACCEPT+ rules generated
     valid but incorrect iptables input. This has been corrected but
     requires that your iptables/kernel support marking rules in any
-    Netfilter table.
+    Netfilter table (CONTINUE in the tcrules file does not require this
+    support).
 
     This fix implements a new 'Mark in any table' capability; those
     who utilize a capabilities file should re-generate the file using
